# iris_control

./: CMakeLists.txt  README.md  package.xml  setup.py
src/: acoustic_pilot.cpp  captain.cpp  captain.hpp  control_rotors.py  control_vision.py  controller_node.cpp  ekf_config.yaml  heading_estimation.cpp  path_motor_control2.py  pilot.cpp  plot_path.py  range_calculator.cpp  setpoints_mkII.cpp  setpoints_pub_iris.cpp  setpoints_pub_iris2.cpp  setpoints_range_pose.cpp  setpoints_visual_navigation.cpp  setpoints_visual_navigation.hpp  thrust_setpoints_pub.cpp
