<?xml version="1.0"?>
<package format="2">
  <name>iris_control</name>
  <version>0.0.0</version>
  <description>The iris_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lmbalves@gmail.com">luis</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LSA</license>

<buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  



  <depend>rosbridge_server</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>
  <depend>rviz</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>joy</depend>
  
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rosparam</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>actionlib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>stonefish_ros</depend>
  <!-- COLA2 Dependencies -->
  <!-- <depend>cola2_lib_ros</depend>
  <depend>cola2_msgs</depend> -->
  <depend>iris_description</depend>
</package>
